unpackaged/main/default/objects/pse__Assignment__c/fields/pse__Scheduled_Days__c.field-meta.xml
<CustomField>
    <fullName>pse__Scheduled_Days__c</fullName>
    <formula>pse__Schedule__r.pse__Scheduled_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scheduled Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>