unpackaged/main/default/objects/pse__Assignment__c/fields/pse__Send_to_Third_Party_Expenses_Application__c.field-meta.xml
<CustomField>
    <fullName>pse__Send_to_Third_Party_Expenses_Application__c</fullName>
    <description>Controls whether or not the assignment is sent to a third-party expenses application.</description>
    <formula>AND(pse__Resource__r.pse__Is_Resource__c , pse__Resource__r.pse__Is_Resource_Active__c , NOT(pse__Project__r.pse__Closed_for_Expense_Entry__c),  NOT(pse__Closed_for_Expense_Entry__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Controls whether or not the assignment is sent to a third-party expenses application.</inlineHelpText>
    <label>Send to Third-Party Expenses Application</label>
    <type>Checkbox</type>
</CustomField>