unpackaged/main/default/objects/pse__Assignment__c/fields/pse__Show_Assignment_Methodologies_Only__c.field-meta.xml
<CustomField>
    <fullName>pse__Show_Assignment_Methodologies_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the Methodology field on the Time Entry page and Expense Entry page only lists assignment methodologies. When true, only assignment methodologies are shown. When false, the methodologies that belong to the project to which the assignment relates are shown. The default value is false.</description>
    <inlineHelpText>Indicates whether the Methodology field on the Time Entry page and Expense Entry page only lists assignment methodologies. When true, only assignment methodologies are shown. When false, the methodologies that belong to the related project are shown.</inlineHelpText>
    <label>Show Assignment Methodologies Only</label>
    <type>Checkbox</type>
</CustomField>