unpackaged/main/default/objects/pse__Assignment__c/fields/pse__Show_Assignment_Milestones_Only__c.field-meta.xml
<CustomField>
    <fullName>pse__Show_Assignment_Milestones_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the Milestone field on the Time Entry page and Expense Entry page only lists assignment milestones. When true, only assignment milestones are shown. When false, the milestones that belong to the project to which the assignment relates are shown. The default value is false.</description>
    <inlineHelpText>Indicates whether the Milestone field on the Time Entry page and Expense Entry page only lists assignment milestones. When true, only assignment milestones are shown. When false, the milestones that belong to the project are shown.</inlineHelpText>
    <label>Show Assignment Milestones Only</label>
    <type>Checkbox</type>
</CustomField>