unpackaged/main/default/objects/pse__Assignment__c/fields/pse__Show_Assignment_Phases_Only__c.field-meta.xml
<CustomField>
    <fullName>pse__Show_Assignment_Phases_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the Phase field on the Time Entry page and Expense Entry page only lists assignment phases. When true, only assignment phases are shown. When false, the phases that belong to the project to which the assignment relates are shown. The default value is false.</description>
    <inlineHelpText>Indicates whether the Phase field on the Time Entry page and Expense Entry page only lists assignment phases. When true, only assignment phases are shown. When false, the phases that belong to the project to which the assignment relates are shown.</inlineHelpText>
    <label>Show Assignment Phases Only</label>
    <type>Checkbox</type>
</CustomField>