unpackaged/main/default/objects/pse__Assignment__c/fields/pse__Suggested_Bill_Rate__c.field-meta.xml
<CustomField>
    <fullName>pse__Suggested_Bill_Rate__c</fullName>
    <formula>pse__Suggested_Bill_Rate_Currency_Code__c &amp; ' ' &amp; TEXT(pse__Suggested_Bill_Rate_Number__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Suggested Bill Rate</label>
    <type>Text</type>
</CustomField>