unpackaged/main/default/objects/pse__Assignment__c/fields/pse__Suggested_Bill_Rate_Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>pse__Suggested_Bill_Rate_Currency_Code__c</fullName>
    <label>Suggested Bill Rate Currency Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>