unpackaged/main/default/objects/pse__Assignment__c/fields/pse__Team_Schedule_Slot__c.field-meta.xml
<CustomField>
    <fullName>pse__Team_Schedule_Slot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The team schedule slot.</description>
    <inlineHelpText>The team schedule slot.</inlineHelpText>
    <label>Team Schedule Slot</label>
    <referenceTo>pse__Team_Schedule_Slot__c</referenceTo>
    <relationshipLabel>Assignments</relationshipLabel>
    <relationshipName>Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>