unpackaged/main/default/objects/pse__Assignment__c/fields/pse__Team_Schedule_Slot_Key__c.field-meta.xml
<CustomField>
    <fullName>pse__Team_Schedule_Slot_Key__c</fullName>
    <description>A list of the related Project, Resource, and Team Schedule Slot IDs.</description>
    <inlineHelpText>A list of the related Project, Resource, and Team Schedule Slot IDs.</inlineHelpText>
    <label>Team Schedule Slot Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>