unpackaged/main/default/objects/pse__Assignment__c/fields/pse__Time_Credited__c.field-meta.xml
<CustomField>
    <fullName>pse__Time_Credited__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox should be checked for non-billable Assignments for which hours are credited towards utilization.</description>
    <inlineHelpText>This checkbox should be checked for non-billable Assignments for which hours are credited towards utilization.</inlineHelpText>
    <label>Time Credited</label>
    <type>Checkbox</type>
</CustomField>