unpackaged/main/default/objects/pse__Assignment__c/fields/pse__Time_Excluded__c.field-meta.xml
<CustomField>
    <fullName>pse__Time_Excluded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox should be checked for non-billable assignments for which time should neither count for or against utilization.</description>
    <inlineHelpText>This checkbox should be checked for non-billable assignments for which time should neither count for or against utilization.</inlineHelpText>
    <label>Time Excluded</label>
    <type>Checkbox</type>
</CustomField>