unpackaged/main/default/objects/pse__Assignment__c/validationRules/pse__Assignment_Currency_is_Constant.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Assignment_Currency_is_Constant</fullName>
    <active>true</active>
    <description>An Assignment's Currency field value may not be updated once set.</description>
    <errorConditionFormula>ISCHANGED(CurrencyIsoCode)</errorConditionFormula>
    <errorDisplayField>CurrencyIsoCode</errorDisplayField>
    <errorMessage>An Assignment's Currency field value may not be updated once set.</errorMessage>
</ValidationRule>