unpackaged/main/default/objects/pse__Assignment__c/validationRules/pse__Assignment_May_Not_Be_Billable.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Assignment_May_Not_Be_Billable</fullName>
    <active>true</active>
    <description>An Assignment may only be marked 'Is Billable' if it is for a Billable Project.</description>
    <errorConditionFormula>AND(pse__Is_Billable__c, NOT(ISNULL(pse__Project__c)), (pse__Project__c &lt;&gt; ''),  NOT(pse__Project__r.pse__Is_Billable__c))</errorConditionFormula>
    <errorDisplayField>pse__Is_Billable__c</errorDisplayField>
    <errorMessage>An Assignment may only be marked 'Is Billable' if it is for a Billable Project.</errorMessage>
</ValidationRule>