unpackaged/main/default/objects/pse__Assignment__c/validationRules/pse__Assignment_Project_is_Constant.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Assignment_Project_is_Constant</fullName>
    <active>true</active>
    <description>An Assignment's Project field value may not be blank and may not be updated once set.</description>
    <errorConditionFormula>OR(ISNULL(pse__Project__c),LEN(pse__Project__c)=0,ISCHANGED(pse__Project__c))</errorConditionFormula>
    <errorDisplayField>pse__Project__c</errorDisplayField>
    <errorMessage>An Assignment's Project field value may not be blank and may not be updated once set.</errorMessage>
</ValidationRule>