unpackaged/main/default/objects/pse__Assignment__c/validationRules/pse__Assignment_Resource_is_Constant.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Assignment_Resource_is_Constant</fullName>
    <active>false</active>
    <description>An Assignment's Resource field value can not be changed.</description>
    <errorConditionFormula>ISCHANGED(pse__Resource__c)</errorConditionFormula>
    <errorDisplayField>pse__Resource__c</errorDisplayField>
    <errorMessage>An Assignment's Resource field value can not be changed.</errorMessage>
</ValidationRule>