unpackaged/main/default/objects/pse__Assignment__c/validationRules/pse__Assignment_Resource_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Assignment_Resource_is_Required</fullName>
    <active>false</active>
    <description>An Assignment's Resource field value may not be blank.</description>
    <errorConditionFormula>ISBLANK(pse__Resource__c)</errorConditionFormula>
    <errorDisplayField>pse__Resource__c</errorDisplayField>
    <errorMessage>An Assignment's Resource field value may not be blank.</errorMessage>
</ValidationRule>