unpackaged/main/default/objects/pse__Assignment__c/validationRules/pse__Billable_Assignments_may_not_be_Excluded.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Billable_Assignments_may_not_be_Excluded</fullName>
    <active>true</active>
    <description>Assignments may only be marked as "Time Excluded" if they are Non-Billable.</description>
    <errorConditionFormula>AND(pse__Is_Billable__c,pse__Time_Excluded__c)</errorConditionFormula>
    <errorDisplayField>pse__Time_Excluded__c</errorDisplayField>
    <errorMessage>Assignments may only be marked as "Time Excluded" if they are Non-Billable.</errorMessage>
</ValidationRule>