unpackaged/main/default/objects/pse__Assignment__c/validationRules/pse__cannot_switch_schedule_records.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__cannot_switch_schedule_records</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(pse__Schedule__c)</errorConditionFormula>
    <errorDisplayField>pse__Schedule__c</errorDisplayField>
    <errorMessage>You cannot switch the schedule record once set.</errorMessage>
</ValidationRule>