unpackaged/main/default/objects/pse__Assignment__c/validationRules/pse__Credited_Assignments_may_not_be_Excluded.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Credited_Assignments_may_not_be_Excluded</fullName>
    <active>true</active>
    <description>Assignments may not be marked as "Time Excluded" if they are also marked as "Time Credited".</description>
    <errorConditionFormula>AND(pse__Time_Credited__c,pse__Time_Excluded__c)</errorConditionFormula>
    <errorDisplayField>pse__Time_Excluded__c</errorDisplayField>
    <errorMessage>Assignments may not be marked as "Time Excluded" if they are also marked as "Time Credited".</errorMessage>
</ValidationRule>