unpackaged/main/default/objects/pse__Assignment__c/validationRules/pse__select_resource.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__select_resource</fullName>
    <active>true</active>
    <errorConditionFormula>( 
	ISNEW() 
	||
	ISCHANGED( pse__Resource__c) 
) 
&amp;&amp;  
( 
	NOT(pse__Resource__r.pse__Is_Resource__c) 
	||  
	NOT(pse__Resource__r.pse__Is_Resource_Active__c) 
)</errorConditionFormula>
    <errorDisplayField>pse__Resource__c</errorDisplayField>
    <errorMessage>You must select an active resource.</errorMessage>
</ValidationRule>